--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "ant-design-vue": "^2.2.0-beta.2",
     "core-js": "^3.6.5",
+    "less": "^4.1.1",
+    "less-loader": "^6.0.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
